[package]
name = "certdiff"
version = "0.0.1"
authors = ["Sahil Tembhare <isr.sahil.mk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
clap = "2.33.0"
json = "0.12.4"
